hacspec-lib: add no_std support

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,12 +10,16 @@ readme = "README.md"
 repository = "https://github.com/hacspec/hacspec"
 
 [dependencies]
-num = "0.4"
-secret_integers = { path = "../utils/secret-integers", version = "0.1.7" } #FIXME: publish new version
-abstract_integers = { path = "../utils/abstract-integers", version = "0.1.5" } #FIXME: publish new version
+num = { version = "0.4", default-features = false }
+secret_integers = { path = "../utils/secret-integers", optional = true, version = "0.1.7" } #FIXME: publish new version
+abstract_integers = { path = "../utils/abstract-integers", version = "0.1.5", default-features = false } #FIXME: publish new version
 hacspec-attributes = { path = "../utils/attributes",  optional = true, version = "0.1.0-beta.1" }
 
 [features]
+default = ["std"]
+alloc = ["secret_integers"]
+std = ["alloc", "secret_integers", "num/std", "abstract_integers/std"]
+
 use_attributes = ["hacspec-attributes", "hacspec-attributes/print_attributes"]
 
 [dev-dependencies]
