--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         submodules: true
     - name: Prepare
-      run: rustup toolchain install nightly && rustup default nightly && rustup component add --toolchain nightly rustc-dev && rustup component add --toolchain nightly llvm-tools-preview
+      run: rustup toolchain install nightly-2021-02-14 && rustup default nightly-2021-02-14 && rustup component add --toolchain nightly-2021-02-14 rustc-dev && rustup component add --toolchain nightly-2021-02-14 llvm-tools-preview
     - name: Build
       run: cargo build --verbose
     - name: Run tests
