set nightly version for get_func_stats on CI

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Test Provider
       run: cargo test --verbose -p rc-tests
     - name: Get hacspec function stats
-      run: bash lib/get_func_stats.sh
+      run: RUST_NIGHTLY=nightly-2021-02-14 ./lib/get_func_stats.sh
     - name: Build and test F* compiler
       run: cargo clean && cd language && cargo +nightly test --verbose
       env:
