--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Get hacspec function stats
       run: RUST_NIGHTLY=nightly-2021-02-14 ./lib/get_func_stats.sh
     - name: Build and test F* compiler
-      run: cargo clean && cd language && cargo +nightly test --verbose
+      run: cargo clean && cd language && cargo +nightly-2021-02-14 test --verbose
