--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "examples/ntru-prime",
     "examples-unsafe",
     "examples/riot-bootloader",
+    "examples/hmac",
 ]
 default-members = [
     "lib",
@@ -42,6 +43,7 @@ default-members = [
     "examples/ntru-prime",
     "examples-unsafe",
     "examples/riot-bootloader",
+    "examples/hmac",
 ]
 
 [profile.release]
