--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -14,6 +14,12 @@ path = "src/tls13.rs"
 
 [dependencies]
 hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
+hacspec-sha256 = { path = "../../examples/sha256" }
+hacspec-curve25519 = { path = "../../examples/curve25519" }
+unsafe-hacspec-examples = { path = "../../examples-unsafe" }
+hacspec-chacha20poly1305 = { path = "../../examples/chacha20poly1305" }
+hacspec-chacha20 = { path = "../../examples/chacha20" }
+hacspec-poly1305 = { path = "../../examples/poly1305" }
 
 [dev-dependencies]
 serde_json = "1.0"
