--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -22,6 +22,7 @@ hacspec-chacha20 = { path = "../../examples/chacha20" }
 hacspec-poly1305 = { path = "../../examples/poly1305" }
 
 [dev-dependencies]
+hex = "0.4.3"
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
