--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -12,7 +12,13 @@ repository = "https://github.com/hacspec/hacspec"
 [lib]
 path = "src/tls13.rs"
 
+[[bin]]
+name = "tls13client"
+path = "src/tls13.rs"
+
 [dependencies]
+rand = "0.8.0"
+hex = "0.4.3"
 hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
 hacspec-sha256 = { path = "../../examples/sha256" }
 hacspec-curve25519 = { path = "../../examples/curve25519" }
@@ -21,8 +27,8 @@ hacspec-chacha20poly1305 = { path = "../../examples/chacha20poly1305" }
 hacspec-chacha20 = { path = "../../examples/chacha20" }
 hacspec-poly1305 = { path = "../../examples/poly1305" }
 
-[dev-dependencies]
-hex = "0.4.3"
+[dev-dependencies]  
+dhat = "0.2.2"
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
