--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ members = [
     "examples/riot-bootloader",
     "examples/hmac",
     "examples/hkdf",
+    "examples/p256",
 ]
 default-members = [
     "lib",
@@ -46,6 +47,7 @@ default-members = [
     "examples/riot-bootloader",
     "examples/hmac",
     "examples/hkdf",
+    "examples/p256",
 ]
 
 [profile.release]
