--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -17,6 +17,7 @@ name = "tls13client"
 path = "src/tls13.rs"
 
 [dependencies]
+backtrace = "0.3.0"
 rand = "0.8.0"
 hex = "0.4.3"
 hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
