--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ members = [
     "examples/hkdf",
     "examples/p256",
     "examples/bls12-381",
+    "examples/ecdsa-p256-sha256",
 ]
 default-members = [
     "lib",
@@ -50,6 +51,7 @@ default-members = [
     "examples/hkdf",
     "examples/p256",
     "examples/bls12-381",
+    "examples/ecdsa-p256-sha256",
 ]
 
 [profile.release]
