--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ members = [
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
+    "exmaples/bls12-381",
 ]
 default-members = [
     "lib",
@@ -48,6 +49,7 @@ default-members = [
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
+    "exmaples/bls12-381",
 ]
 
 [profile.release]
