--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ members = [
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
-    "exmaples/bls12-381",
+    "examples/bls12-381",
 ]
 default-members = [
     "lib",
@@ -49,7 +49,7 @@ default-members = [
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
-    "exmaples/bls12-381",
+    "examples/bls12-381",
 ]
 
 [profile.release]
