--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -10,20 +10,6 @@ jobs:
         os:
           - ubuntu-latest
           - macos-latest
-        spec:
-          - hacspec-chacha20
-          - hacspec-chacha20poly1305
-          - hacspec-poly1305
-          - hacspec-curve25519
-          - hacspec-hkdf
-          - hacspec-hmac
-          - hacspec-sha256
-          - hacspec-ntru-prime
-          - hacspec-p256
-          - hacspec-riot-bootloader
-          - hacspec-sha3
-          - hacspec-gimli
-          - hacspec-bls12-381
 
     steps:
       - uses: actions/checkout@v2
@@ -34,4 +20,4 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Typecheck
-        run: cargo hacspec ${{ matrix.spec }}
+        run: examples/typecheck_examples.sh
