--- a/examples/ecdsa-p256-sha256/Cargo.toml
+++ b/examples/ecdsa-p256-sha256/Cargo.toml
@@ -11,3 +11,8 @@ path = "src/ecdsa.rs"
 hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
 hacspec-p256 = { path = "../p256" }
 hacspec-sha256 = { path = "../sha256" }
+
+[dev-dependencies]
+serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
+hacspec-dev = { path = "../../utils/dev" }
