--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "examples/gmac",
     "examples/aes",
     "examples/gf128",
+    "examples/aes128-gcm",
 ]
 default-members = [
     "lib",
@@ -58,6 +59,7 @@ default-members = [
     "examples/gmac",
     "examples/aes",
     "examples/gf128",
+    "examples/aes128-gcm",
 ]
 
 [profile.release]
