--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -23,7 +23,6 @@ hex = "0.4.3"
 hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
 hacspec-sha256 = { path = "../../examples/sha256" }
 hacspec-curve25519 = { path = "../../examples/curve25519" }
-unsafe-hacspec-examples = { path = "../../examples-unsafe" }
 hacspec-chacha20poly1305 = { path = "../../examples/chacha20poly1305" }
 hacspec-chacha20 = { path = "../../examples/chacha20" }
 hacspec-poly1305 = { path = "../../examples/poly1305" }
@@ -31,6 +30,9 @@ hacspec-hmac = { path = "../../examples/hmac" }
 hacspec-hkdf = { path = "../../examples/hkdf" }
 hacspec-ecdsa-p256-sha256 = { path = "../../examples/ecdsa-p256-sha256" }
 hacspec-p256 = { path = "../../examples/p256" }
+hacspec-aes = { path = "../../examples/aes", version = "0.1.0" }
+hacspec-gf128 = { path = "../../examples/gf128", version = "0.1.0" }
+hacspec-aes128-gcm = { path = "../../examples/aes128-gcm", version = "0.1.0" }
 
 [dev-dependencies]  
 dhat = "0.2.2"
