--- a/utils/attributes/Cargo.toml
+++ b/utils/attributes/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0"
 hacspec-util = { path = "../util", version = "0.1.0-beta.1" }
 
 [features]
-default = []
+default = [ "hacspec_unsafe" ]
 print_attributes = []
 update_allowlist = [ "print_attributes" ]
+hacspec_unsafe = []
