--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -44,3 +44,8 @@ serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
 hacspec-dev = { path = "../../utils/dev" }
+criterion = "0.3"
+
+[[bench]]
+name = "bulk"
+harness = false
