--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -45,6 +45,10 @@ serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
 hacspec-dev = { path = "../../utils/dev" }
 criterion = "0.3"
+# Rustls dependencies for benchmarking against it
+rustls = { version = "0.19", git = "https://github.com/ctz/rustls" }
+webpki = "0.22"
+rustls-pemfile = "0.2.0"
 
 [[bench]]
 name = "bulk"
@@ -53,3 +57,11 @@ harness = false
 [[bench]]
 name = "handshake"
 harness = false
+
+[[bench]]
+name = "cryptolib"
+harness = false
+
+[[example]]
+name = "bench"
+path = "examples/bench.rs"
