--- a/protocols/tls13/Cargo.toml
+++ b/protocols/tls13/Cargo.toml
@@ -45,8 +45,9 @@ serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
 hacspec-dev = { path = "../../utils/dev" }
 criterion = "0.3"
-# Rustls dependencies for benchmarking against it
-rustls = { version = "0.19", git = "https://github.com/ctz/rustls" }
+# Rustls dependencies for benchmarking against it. It is fixed to a version on
+# the branch.
+rustls = { git = "https://github.com/franziskuskiefer/rustls", branch = "hacspec-bench" }
 webpki = "0.22"
 rustls-pemfile = "0.2.0"
 
